# movie-manager

./: .gitignore  CHANGELOG.md  PERSONAL_CRITERIA.md  README.md  TODO.md  app.py  cli.py  csv_to_sqlite.py  dashboard.pbix  devlog.md  logging_config.py  pyproject.toml  visualization.ipynb
data/: data.csv  movielens-cleaned.csv  movielens-extended.csv  movies.db
notebooks/: blacklist.json  movielens.ipynb  rating_weight.ipynb  recsys.ipynb  time_decay.ipynb
pages/: 1_data.py  2_add_movie.py  3_edit_movie.py  4_visualization.py  5_sql.py  6_backup_restore.py
scripts/: filter_added_logs.py
sql/: 2000s.sql  animestats.sql  old.sql  random.sql  recentwaiting.sql  type.sql  watchedmatrix.sql  watchedmonth.sql  year.sql
sql/command/: recent.sql
tests/: test_db.py  test_recsys.py
utils/: cli.py  db.py  movie.py  recsys.py  streamlit_helpers.py
