[project]
name = "movie-manager"
version = "0.4.0"
description = "ngntrgduc's movie manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.50.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.3.0",
    "rich>=14.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
